ffn.out
  File "/vast/home/ajherman/attention/main.py", line 135
    model = Transformer(args**)
                              ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/vast/home/ajherman/attention/main.py", line 135, in <module>
    model = Transformer(**args)
            ^^^^^^^^^^^^^^^^^^^
TypeError: utils.Transformer() argument after ** must be a mapping, not Namespace
Traceback (most recent call last):
  File "/vast/home/ajherman/attention/main.py", line 135, in <module>
    model = Transformer(**arg_dict)
            ^^^^^^^^^^^^^^^^^^^^^^^
TypeError: Transformer.__init__() got an unexpected keyword argument 'batch_size'
Traceback (most recent call last):
  File "/vast/home/ajherman/attention/main.py", line 135, in <module>
    model = Transformer(**arg_dict)
            ^^^^^^^^^^^^^^^^^^^^^^^
  File "/vast/home/ajherman/attention/utils.py", line 340, in __init__
    self.__dict__.update(vars(args))
                              ^^^^
NameError: name 'args' is not defined. Did you mean: 'kwargs'?
